<resources>
    <string name="app_name">Proyect</string>
    <string name="email">Email</string>
    <string name="usuario">Usuario</string>
    <string name="telefono">Telefono</string>
    <string name="contrase_a">Contraseña</string>
    <string name="registrarse">Registrarse</string>
    <string name="iniciar_sesion">Iniciar sesion</string>
    <string name="para_cambiar_tu_cuerpo_tienes_que_cambiar_tu_mente">Para cambiar tu cuerpo tienes que cambiar tu mente</string>
    <string name="_1_abre_tus_piernas_hasta_el_ancho_de_tus_hombros_n2_junta_tus_manos_o_estira_tus_brazos_en_un_ngulo_de_90_grados_n3_cuando_vayas_a_bajar_mant_n_los_gl_teos_hacia_atr_s_haz_como_si_fueras_a_sentarte_en_una_silla_imaginaria_n4_es_importante_que_las_rodillas_no_sobrepasen_la_punta_de_tus_pies_siempre_deben_quedar_por_detr_s_n5_debes_intentar_mantener_la_espalda_erguida_en_todo_momento_y_evitar_inclinarte_demasiado_hacia_adelante_n6_cuando_bajes_inspira_te_ser_m_s_f_cil_bajar_y_mantener_la_espalda_recta">1ºAbre tus piernas hasta el ancho de tus hombros. \n2º Junta tus manos o estira tus brazos en un ángulo de 90 grados. \n3º Cuando vayas a bajar, mantén los glúteos hacia atrás. Haz como si fueras a sentarte en una silla imaginaria.\n4º Es importante que las rodillas no sobrepasen la punta de tus pies, siempre deben quedar por detrás.\n5º Debes intentar mantener la espalda erguida en todo momento y evitar inclinarte demasiado hacia adelante.\n6º Cuando bajes, inspira, te será más fácil bajar y mantener la espalda recta.</string>
    <string name="sentadillas">SENTADILLAS</string>
    <string name="todo">TODO</string>
    <string name="prensa_de_triceps">PRENSA DE TRICEPS</string>
    <string name="_1_para_realizar_los_fondos_de_tr_ceps_en_m_quina_nos_deberemos_sentar_de_forma_segura_en_una_m_quina_de_empuje_seleccionando_el_peso_y_sujetando_firmemente_las_asas_n_2_ahora_mantendremos_los_codos_en_a_los_lados_con_el_fin_de_poner_nfasis_en_el_trabajo_en_los_tr_ceps_los_codos_deber_n_estar_doblados_en_un_ngulo_de_90_grados_n_3_posteriormente_deberemos_contraer_el_tr_ceps_extendiendo_los_brazos_hacia_abajo_a_medida_que_exhalamos_n_4_en_la_parte_inferior_del_movimiento_nos_centraremos_en_mantener_una_peque_a_curva_con_nuestros_brazos_para_mantener_la_tensi_n_en_los_m_sculos_del_tr_ceps_n_5_poco_a_poco_vamos_a_llevar_los_brazos_a_la_posici_n_inicial_mientras_inhalamos_repetiremos_el_procedimiento_para_la_cantidad_recomendada_de_repeticiones_en_nuestra_rutina_de_ejercicios">1º Para realizar los fondos de tríceps en máquina, nos deberemos sentar de forma segura en una máquina de empuje, seleccionando el peso y sujetando firmemente las asas.\n 2º Ahora mantendremos los codos en a los lados, con el fin de poner énfasis en el trabajo en los tríceps. Los codos deberán estar doblados en un ángulo de 90 grados.\n 3º Posteriormente, deberemos contraer el tríceps, extendiendo los brazos hacia abajo a medida que exhalamos. \n 4º En la parte inferior del movimiento, nos centraremos en mantener una pequeña curva con nuestros brazos para mantener la tensión en los músculos del tríceps.\n 5º Poco a poco, vamos a llevar los brazos a la posición inicial mientras inhalamos. Repetiremos el procedimiento para la cantidad recomendada de repeticiones en nuestra rutina de ejercicios.</string>
    <string name="_1_para_comenzar_este_ejercicio_debemos_posicionarnos_de_pie_frente_al_aparato_de_polea_alta_y_habiendo_seleccionado_el_peso_a_utilizar_debemos_tomar_con_las_manos_el_mago_de_manera_que_las_palmas_miren_hacia_el_suelo_n_2_con_los_brazos_pegados_al_torso_y_los_codos_siempre_alineados_con_el_cuerpo_comenzamos_el_movimiento_n_3_realizamos_una_extensi_n_de_los_codos_llevando_el_mango_de_la_polea_hacia_abajo_sin_despegar_los_codos_de_los_lados_del_cuerpo_y_nicamente_movilizando_el_antebrazo_espiramos_al_final_del_movimiento_y_regresamos_lentamente_a_la_posici_n_inicial_n_4_si_se_utilizan_cargas_pesadas_se_puede_inclinar_un_poco_el_torso_tambi_n_puede_realizarse_este_ejercicio_de_espaldas_a_la_polea_alta_y_adelantando_un_pie_por_sobre_otro_que_permite_inclinar_el_torso_hacia_adelante">1º Para comenzar este ejercicio debemos posicionarnos de pie frente al aparato de polea alta, y habiendo seleccionado el peso a utilizar, debemos tomar con las manos el mago de manera que las palmas miren hacia el suelo.\n 2º Con los brazos pegados al torso y los codos siempre alineados con el cuerpo, comenzamos el movimiento.\n 3º Realizamos una extensión de los codos, llevando el mango de la polea hacia abajo, sin despegar los codos de los lados del cuerpo y únicamente movilizando el antebrazo. Espiramos al final del movimiento y regresamos lentamente a la posición inicial.\n 4º Si se utilizan cargas pesadas se puede inclinar un poco el torso, también puede realizarse este ejercicio de espaldas a la polea alta y adelantando un pie por sobre otro que permite inclinar el torso hacia adelante.</string>
    <string name="extension_de_triceps">EXTENSION DE TRICEPS</string>
    <string name="press_hombro">PRESS HOMBRO</string>
    <string name="_1_realice_la_posici_n_inicial_n2_deber_alzar_la_barra_lo_m_s_alto_que_pueda_y_lograr_entonces_que_los_brazos_queden_totalmente_extendidos_n3_luego_deber_bajarla_lentamente_y_volver_a_la_posici_n_inicial_n4_repita_el_ejercicio_cuantas_veces_indique_su_plan_de_entrenamiento">1º Realice la posición inicial.\n2º Deberá alzar la barra lo más alto que pueda, y lograr entonces que los brazos queden totalmente extendidos.\n3º Luego deberá bajarla lentamente y volver a la posición inicial.\n4º Repita el ejercicio cuantas veces indique su plan de entrenamiento.</string>
    <string name="pajaros">PAJAROS</string>
    <string name="_1_nos_colocamos_de_pie_con_las_piernas_separadas_del_ancho_de_los_hombros_aproximadamente_con_las_rodillas_ligeramente_flexionadas_n2_cogemos_las_mancuernas_en_semipronaci_n_mir_ndose_las_palmas_entre_si_n3_inclinamos_el_tronco_hacia_delante_manteniendo_la_espalda_recta_n4_los_brazos_deben_de_estar_colgando_con_los_codos_ligeramente_flexionados_n5_inspiramos_y_elevamos_los_brazos_de_manera_lateral_hasta_que_queden_paralelos_al_suelo_quedando_como_un_p_jaro_con_las_alas_extendidas_n6_mantenemos_1_segundo_y_descendemos_lentamente_mientras_espiramos_el_aire_hasta_llegar_a_nuestra_posici_n_inicial">1º Nos colocamos de pie con las piernas separadas del ancho de los hombros aproximadamente con las rodillas ligeramente flexionadas.\n2º Cogemos las mancuernas en semipronación(mirándose las palmas entre si).\n3º Inclinamos el tronco hacia delante , manteniendo la espalda recta.\n4º Los brazos deben de estar colgando con los codos ligeramente flexionados.\n5º Inspiramos y elevamos los brazos de manera lateral hasta que queden paralelos al suelo, quedando como un pájaro con las alas extendidas.\n6º Mantenemos 1 segundo y descendemos lentamente mientras espiramos el aire hasta llegar a nuestra posición inicial.</string>
    <string name="remo_a_la_cara_con_cuerda_en_polea_alta">REMO A LA CARA CON CUERDA EN POLEA ALTA</string>
    <string name="_1_agarra_las_dos_asas_que_tiene_la_cuerda_y_tira_de_ella_hacia_la_mitad_del_pecho_mientras_abres_los_codos_hacia_los_lados_n2_posteriormente_tira_de_las_manijas_hacia_afuera_para_estimular_los_m_sculos_exhala_durante_esta_parte_n3_estira_los_brazos_extendi_ndolos_de_forma_lenta_hacia_adelante_e_inhala">1º Agarra las dos asas que tiene la cuerda y tira de ella hacia la mitad del pecho, mientras abres los codos hacia los lados. \n2º Posteriormente tira de las manijas hacia afuera, para estimular los músculos. Exhala durante esta parte.\n3º Estira los brazos extendiéndolos de forma lenta hacia adelante e inhala.</string>
    <string name="elevacion_lateral">ELEVACION LATERAL</string>
    <string name="_1_col_cate_de_pie_con_los_pies_separados_a_la_anchura_de_los_hombros_y_coge_dos_mancuernas_con_las_palmas_de_las_manos_mirando_cara_ti_y_los_brazos_estirados_n2_mant_n_las_rodillas_tenuemente_dobladas_n3_levanta_los_brazos_hacia_los_laterales_hasta_el_momento_en_que_est_n_paralelos_al_suelo_n_4_haz_una_pausa_con_los_brazos_en_su_punto_m_s_alto_y_vuelve_a_la_situaci_n_inicial">1º Colócate de pie con los pies separados a la anchura de los hombros y coge dos mancuernas con las palmas de las manos mirando cara ti y los brazos estirados.\n2º Mantén las rodillas tenuemente dobladas.\n3º Levanta los brazos hacia los laterales hasta el momento en que estén paralelos al suelo.\n 4º Haz una pausa con los brazos en su punto más alto y vuelve a la situación inicial.</string>
    <string name="_1_desde_una_posici_n_en_la_que_nos_encontremos_sentados_o_bien_de_pie_vamos_a_tomar_una_mancuerna_con_los_hombros_colocados_hacia_adelante_n2_los_brazos_permanecer_n_extendidos_en_este_momento_y_bajaremos_al_realizar_una_sentadilla_con_los_muslos_esta_va_a_ser_la_que_tomaremos_como_posici_n_inicial_n3_el_segundo_paso_va_a_consistir_en_subir_los_codos_tal_y_como_si_hici_ramos_un_ejercicio_de_remo_vertical_con_mancuernas_esto_hasta_el_momento_en_que_nuestros_codos_se_encuentren_a_la_altura_de_los_hombros_n4_posteriormente_vamos_a_girar_externamente_las_mancuernas_para_colocarlas_en_posici_n_cara_arriba_sosteniendo_las_partes_superiores_de_los_brazos_de_preferencia_en_el_mismo_nivel_e_iniciaremos_con_el_ciclo_de_respiraci_n_de_forma_normal_n5_continuaremos_con_este_movimiento_hasta_el_punto_en_que_los_antebrazos_los_tengamos_de_forma_perpendicular_al_suelo_y_las_caras_de_las_manos_se_encuentren_apuntando_hacia_arriba_n6_en_este_punto_presiona_las_pesas_sobre_la_cabeza_tal_y_como_si_estuvieses_realizando_un_ejercicio_de_press_de_hombros">1ºDesde una posición en la que nos encontremos sentados o bien de pie, vamos a tomar una mancuerna con los hombros colocados hacia adelante.\n2º Los brazos permanecerán extendidos en este momento y bajaremos al realizar una sentadilla con los muslos. Esta va a ser la que tomaremos como posición inicial.\n3º El segundo paso va a consistir en subir los codos, tal y como si hiciéramos un ejercicio de remo vertical con mancuernas, esto, hasta el momento en que nuestros codos se encuentren a la altura de los hombros.\n4º Posteriormente, vamos a girar externamente las mancuernas para colocarlas en posición cara arriba, sosteniendo las partes superiores de los brazos, de preferencia, en el mismo nivel; e iniciaremos con el ciclo de respiración de forma normal.\n5º Continuaremos con este movimiento hasta el punto en que los antebrazos los tengamos de forma perpendicular al suelo y las caras de las manos se encuentren apuntando hacia arriba.\n6º En este punto, presiona las pesas sobre la cabeza tal y como si estuvieses realizando un ejercicio de press de hombros.</string>
    <string name="press_cubano">PRESS CUBANO</string>
</resources>